Edit header & description

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
           border: 1px solid;
         }
        </style>
-       <p>A very simple pong game where the goal is to keep a ball within a playing field usinga racket at the front and optionally at the back side of the playing field</p>
+       <h1>Pong 3D</h1>
+       <p>Keep the ball within the playing field.</p>
        <canvas id="mycanvas"
                width="800" height="600">
        </canvas>
