--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 <body>
     <script type="text/javascript" src="node_modules/three/build/three.min.js"></script>
+    <script type="text/javascript" src="TrackballControls.js"></script>
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
