Move library modules to /lib

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
        </canvas>
 </head>
 <body>
-    <script type="text/javascript" src="node_modules/three/build/three.min.js"></script>
-    <script type="text/javascript" src="TrackballControls.js"></script>
+    <script type="text/javascript" src="lib/three.min.js"></script>
+    <script type="text/javascript" src="lib/TrackballControls.js"></script>
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
